--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.28.0
-pythermalcomfort>=2.8.0
-openai>=1.0.0
-crewai>=0.28.0
-matplotlib>=3.7.0
-plotly>=5.14.0
+streamlit==1.31.0
+pandas==2.1.4
+numpy==1.26.3
+requests==2.31.0
+pythermalcomfort==2.9.0
+openai==1.12.0
+crewai==0.28.0
+matplotlib==3.8.2
+plotly==5.18.0
+chromadb==0.4.22
+pydantic<2.0.0
+langchain<0.1.0
