--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
+python-dotenv==1.0.0
+crewai==0.28.0
 streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.3
 requests==2.31.0
+pyngrok==6.0.0
 pythermalcomfort==2.9.0
 openai==1.12.0
-crewai==0.28.0
-matplotlib==3.8.2
-plotly==5.18.0
-chromadb==0.4.22
-pydantic<2.0.0
-langchain<0.1.0
+pandas==2.1.4
+numpy==1.26.3
