--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 python-dotenv==1.0.0
-crewai==0.28.0
 streamlit==1.31.0
 requests==2.31.0
 pyngrok==6.0.0
@@ -7,3 +6,4 @@ pythermalcomfort==2.9.0
 openai==1.12.0
 pandas==2.1.4
 numpy==1.26.3
+pysqlite3-binary>=0.5.0
