--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python-dotenv==1.0.0
-streamlit==1.31.0
-requests==2.31.0
-pyngrok==6.0.0
-pythermalcomfort==2.9.0
-openai==1.12.0
-pandas==2.1.4
-numpy==1.26.3
-pysqlite3-binary>=0.5.0
+python-dotenv==1.1.0
+crewai==0.119.0
+streamlit==1.45.0
+requests==2.32.3
+pyngrok==7.2.7
+pythermalcomfort==3.1.1
+openai==1.75.0
+pandas==2.2.2
+numpy==2.0.2
