--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-python-dotenv==1.1.0
-crewai==0.119.0
-streamlit==1.45.0
-requests==2.32.3
-pyngrok==7.2.7
-pythermalcomfort==3.1.1
-openai==1.75.0
-pandas==2.2.2
-numpy==2.0.2
-pysqlite3-binary>=0.5.0
+streamlit
+pandas
+numpy
+requests
+pythermalcomfort
+openai
+crewai
